add service and distinguish the nodes by hostname

--- a/nginx-example/index.html
+++ b/nginx-example/index.html
@@ -3,7 +3,7 @@
         <title>Welcome to the Kubernetes world!</title>
     </head>
     <body>
-        <h1>Welcome!</h1>
+        <h1>Welcome! This is host: [K8S_HOSTNAME]</h1>
         <p>Welcome to the <a href="https://cybertaotao.com/">Cybertaotao</a> world!</p>
     </body>
 </html>
